FIX: Collection tools alignment incorrect (centre not right aligned to match the top half).
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10519 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1269,7 +1269,7 @@ UL.jqueryFileTree A:hover {font-weight:bold;}
     visibility:visible;
     }
     
-.CollectionPanelTools {visibility:hidden;text-align:center;}
+.CollectionPanelTools {visibility:hidden;text-align:right;}
 .CollectionPanelShell:hover .CollectionPanelTools {visibility:visible;}
 #FilterNodeOptions .FilterItemContainer > label { width: 150px; }.tag-editor li { padding: initial; }
 
